@@ -37,6 +37,10 @@ autocmd.noMatching = No matching autocommands
 autocmd.noGroup-1 = No such group or event: %S
 autocmd.cantExecuteAll = Can't execute autocommands for ALL events
 
+autocomplete.description-1 = Native '%S' autocompletions
+autocomplete.noSuchProvider-1 = No such autocomplete provider '%S'
+autocomplete.title-1 = '%S'
+
 bookmark.noMatching-2 = No bookmarks matching tags %S and string %S
 bookmark.noMatchingTags-1 = No bookmarks matching tags %S
 bookmark.noMatchingString-1 = No bookmarks matching string %S
