@@ -510,13 +510,20 @@
         <p>Items which are completed at the <ex>:open</ex> prompts. Available items:</p>
 
         <dl dt="width: 6em;">
-            <dt>s</dt> <dd>Search engines and keyword URLs</dd>
-            <dt>f</dt> <dd>Local files</dd>
-            <dt>l</dt> <dd>&dactyl.host; location bar entries (bookmarks and history sorted in an intelligent way)</dd>
-            <dt>b</dt> <dd>Bookmarks</dd>
-            <dt>h</dt> <dd>History</dd>
-            <dt>S</dt> <dd>Search engine suggestions</dd>
+            <dt>search</dt> <dd>Search engines and keyword URLs</dd>
+            <dt>file</dt> <dd>Local files</dd>
+            <dt>location</dt> <dd>&dactyl.host; location bar entries (bookmarks and history sorted in an intelligent way)</dd>
+            <dt>bookmark</dt> <dd>Bookmarks</dd>
+            <dt>history</dt> <dd>History</dd>
+            <dt>suggest</dt> <dd>Search engine suggestions</dd>
         </dl>
+
+        <p>
+            Additionally, native search providers can be added by prefixing
+            their names with the string <str delim="'">native:</str>. These
+            providers are often added by other add-ons and are occasionally
+            useful.
+        </p>
 
         <p>
             The order is important, such that <se opt="complete"><str delim="">bsf</str></se> will
@@ -524,8 +531,14 @@
             matching files.
         </p>
 
+        <note>
+            For backward compatibility, this option currently accepts a single
+            entry containing single-letter names for completers. This usage
+            is deprecated and will be removed in the future.
+        </note>
+
         <warning>
-            Using <em>b</em> and <em>h</em> can make completion very slow if
+            Using <em>bookmark</em> and <em>history</em> can make completion very slow if
             there are many items.
         </warning>
     </description>
